# blender_bench

./: .gitignore  CMakeLists.txt  README.md  bench_cross_tri.cpp  bench_geom.cpp  bench_is_quad_flip.cpp  bench_math.cpp  bench_matrix.cpp  bench_normal_tri.cpp  bench_quantize.cpp  bench_simulation.cpp  blender_bench.cpp  geo_quadsphere1.h
blenlib/: BLI_compiler_compat.h  BLI_math_base.h  BLI_math_geom.h  BLI_math_inline.h  BLI_math_matrix.h  BLI_math_vector.h  CMakeLists.txt  math_base_inline.c  math_geom.c  math_matrix.c  math_vector_inline.c
draw/: GPU_vertex_format.h
simulation/: implicit_blender.h
test/: CMakeLists.txt  ULPCompare.h  test_math.cpp  test_type.h
